@@ -1,3 +1,7 @@
+2006-12-12  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/libYARP_OS/src/Vector.cpp: fixed constructor bug #1601862
+
 2006-12-07  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* example/swig: Lots of small improvements - hopefully I 
